vlib/v/parser/tests/declare_static_fn_as_receiver_method_err.vv
struct Foo {
}

fn (y Foo) Foo.new() Foo {
	return Foo{}
}

fn main() {
	x := Foo{}.new()
	println(x)
}
